[tool.poetry]
name = "awesome-llm"
version = "0.1.0"
description = ""
authors = ["bilalpiaic <omegaai.piaic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
google-generativeai = "^0.8.3"
pillow = "^11.0.0"
langchain = "^0.3.13"
langchain-core = "^0.3.28"
langchain-community = "^0.3.13"
langgraph = "^0.2.60"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
